<?xml version="1.0" encoding="utf-8"?>
<!-- __BEGIN_LICENSE__ -->
<!-- Copyright (C) 2008-2010 United States Government as represented by -->
<!-- the Administrator of the National Aeronautics and Space Administration. -->
<!-- All Rights Reserved. -->
<!-- __END_LICENSE__ -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<item android:id="@+id/message_list_button"
		  android:title="@string/message_list_button_title"
		  android:icon="@android:drawable/ic_menu_info_details"></item>
	<item android:id="@+id/create_message_button"
		  android:title="@string/create_message_button_title"
		  android:icon="@android:drawable/ic_menu_add"></item>
	<item android:id="@+id/settings_button"
		  android:title="@string/settings_menu_button_title"
		  android:icon="@android:drawable/ic_menu_preferences"></item>
	<item android:id="@+id/logout_menu_button" 
		  android:title="@string/logout_menu_button_title" 
		  android:icon="@android:drawable/ic_menu_delete"></item>
	<item android:id="@+id/exit_menu_button" 
		  android:title="@string/exit_menu_button_title"></item>
</menu>